latex2mmlc/src/snapshots/latex2mmlc__tests__quintuple_prime.snap
---
source: latex2mmlc/src/lib.rs
expression: "f'''''"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
        </mrow>
    </msup>
</math>
