latex2mmlc/src/snapshots/latex2mmlc__tests__simple_accent.snap
---
source: src/lib.rs
expression: "\\dot{x}"
---
<mover>
    <mi>x</mi>
    <mo accent="true">˙</mo>
</mover>

