latex2mmlc/src/snapshots/latex2mmlc__tests__simple_expression.snap
---
source: latex2mmlc/src/lib.rs
expression: "x = 3+\\alpha"
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mn>3</mn>
    <mo>+</mo>
    <mi>α</mi>
</math>
