latex2mmlc/src/snapshots/latex2mmlc__tests__simple_fraction.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\frac{1}{2}"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>2</mn>
    </mfrac>
</math>
