latex2mmlc/src/snapshots/latex2mmlc__tests__simple_integral.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\int dx"
---
<math>
<mo>∫</mo>
<mi>d</mi>
<mi>x</mi>
</math>
