latex2mmlc/src/snapshots/latex2mmlc__tests__simple_overset.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\overset{n}{X}"
---
<math>
    <mover>
        <mi>X</mi>
        <mi>n</mi>
    </mover>
</math>
