latex2mmlc/src/snapshots/latex2mmlc__tests__sine_function.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\sin x"
---
<math>
    <mi>sin</mi>
    <mi>x</mi>
</math>
