latex2mmlc/src/snapshots/latex2mmlc__tests__slashed.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\slashed{\\partial}"
---
<math>
    <mi>∂&#x0338;</mi>
</math>
