latex2mmlc/src/snapshots/latex2mmlc__tests__slightly_more_complex_fraction.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\frac{12}{5}"
---
<math>
<mfrac>
    <mn>12</mn>
    <mn>5</mn>
</mfrac>
</math>
