latex2mmlc/src/snapshots/latex2mmlc__tests__spaces_in_env_name.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\begin{  pmatrix   } x \\\\ y \\end{pmatrix}"
---
UnknownEnvironment(
    "\u{a0}\u{a0}pmatrix\u{a0}\u{a0}\u{a0}",
)
